--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -158,7 +158,11 @@ jobs:
         UPDATED_PR_BODY="${PR_BODY}\nrun_id=${RUN_ID}"
         echo "Updating PR #$PR_NUMBER with run_id=$RUN_ID"
         echo "gh pr edit $PR_NUMBER --body \"$UPDATED_PR_BODY\""
-        gh pr edit $PR_NUMBER --body "$UPDATED_PR_BODY"
+        curl -X PATCH \
+          -H "Authorization: token $GITHUB_TOKEN" \
+          -H "Content-Type: application/json" \
+          -d "{\"body\":\"$UPDATED_PR_BODY\"}" \
+          https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER
   
     - name: Upload ${{ inputs.stack }} Plan to S3
       run: |
