--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -214,7 +214,7 @@ jobs:
 
     - name: Retrieve log file and upload to s3
       run: |
-        TIMESTAMP=$(date +'%Y-%m-%d-%H-%M-%S')
+        TIMESTAMP=$(date +'%Y-%m-%d-%H:%M:%S')
         LOG_FILENAME="TerraformPlan_${{ inputs.github_event_number }}_PR_$TIMESTAMP.txt"
         gh api repos/${{ github.repository }}/actions/jobs/${{ needs.terraform.outputs.run_id }}/logs > $LOG_FILENAME
         aws s3 cp $LOG_FILENAME s3://${{ inputs.s3bucketName }}/logs/Plan/
