--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -35,7 +35,7 @@ jobs:
       actions: read
       id-token: write
       contents: write
-      pull-requests: write  # Explicitly adding permission to modify pull requests
+      pull-requests: write
     defaults:
       run:
         shell: bash
@@ -155,15 +155,15 @@ jobs:
         PR_NUMBER=${{ inputs.github_event_number }}
         RUN_ID=${{ steps.save-run-id.outputs.run_id }}
         PR_BODY=$(gh pr view $PR_NUMBER --json body --jq '.body')
-        UPDATED_PR_BODY="${PR_BODY}\nrun_id=${RUN_ID}"
+        UPDATED_PR_BODY=$(echo "$PR_BODY" | sed '/run_id=/d')
+        UPDATED_PR_BODY="${UPDATED_PR_BODY}\nrun_id=${RUN_ID}"
         echo "Updating PR #$PR_NUMBER with run_id=$RUN_ID"
-        echo "gh pr edit $PR_NUMBER --body \"$UPDATED_PR_BODY\""
         curl -X PATCH \
           -H "Authorization: token $GITHUB_TOKEN" \
           -H "Content-Type: application/json" \
           -d "{\"body\":\"$(echo "$UPDATED_PR_BODY" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')\"}" \
           https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER
-  
+
     - name: Upload ${{ inputs.stack }} Plan to S3
       run: |
         cd ${{ inputs.stack }}
@@ -214,11 +214,9 @@ jobs:
 
     - name: Retrieve log file and upload to s3
       run: |
-        TIMESTAMP=$(date +'%Y-%m-%d-%H:%M:%S')
+        TIMESTAMP=$(date +'%Y-%m-%d-%H-%M-%S')
         LOG_FILENAME="TerraformPlan_${{ inputs.github_event_number }}_PR_$TIMESTAMP.txt"
-        # Get log file
-        gh api repos/{owner}/{repo}/actions/jobs/${{ needs.terraform.outputs.run_id }}/logs > $LOG_FILENAME
-        # Upload it to s3
+        gh api repos/${{ github.repository }}/actions/jobs/${{ needs.terraform.outputs.run_id }}/logs > $LOG_FILENAME
         aws s3 cp $LOG_FILENAME s3://${{ inputs.s3bucketName }}/logs/Plan/
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
