--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -31,6 +31,7 @@ jobs:
     runs-on: arvato
     outputs:
       run_id: ${{ steps.save-run-id.outputs.run_id }}
+      output1: ${{ steps.job.outputs.job_id }}
     permissions:
       actions: read
       id-token: write
@@ -193,7 +194,7 @@ jobs:
   logging:
     name: 'Save logs'
     needs: terraform
-    runs-on: arvato
+    runs-on: ubuntu-latest
     if: always()
     permissions:
       actions: read
@@ -213,7 +214,8 @@ jobs:
       run: |
         TIMESTAMP=$(date +'%Y-%m-%d-%H-%M-%S')
         LOG_FILENAME="Plan_${{ inputs.github_event_number }}_PR_$TIMESTAMP.txt"
-        gh api repos/{owner}/{repo}/actions/jobs/${{ needs.terraform.outputs.run_id }}/logs > $LOG_FILENAME
+        gh api repos/{owner}/{repo}/actions/jobs/${{ needs.terraform.outputs.output1 }}/logs > $LOG_FILENAME
         aws s3 cp $LOG_FILENAME s3://${{ inputs.s3bucketName }}/logs/Plan/
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
