--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -174,9 +174,9 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: lambda-zips
-        github-token: ${{ secrets.GH_PAT }} # token with actions:read permissions on target repo
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ github.repository }}
-        run-id: ${{ inputs.github_event_number }}
+        run-id: ${{ steps.get-run-id.outputs.run_id }}
 
     - name: List downloaded files
       run: ls -al .
