--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -89,7 +89,7 @@ jobs:
     - name: Tofu Init ${{ inputs.stack }}
       run: |
         cd ${{ inputs.stack }}
-        tofu run-all init -upgrade
+        tofu init -upgrade
 
     - name: terraform validate ${{ inputs.stack }}
       uses: dflook/terraform-validate@v1
