--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -178,8 +178,23 @@ jobs:
     - name: Unzip Lambda ZIPs
       run: |
         mkdir -p lambda_zips_unzipped
-        find . -type f -name '*.zip' -exec unzip -o {} -d lambda_zips_unzipped \;
-        
+        find . -type f -name '*.zip' -exec sh -c '
+          for file; do
+            dir=$(basename "$file" .zip)
+            mkdir -p lambda_zips_unzipped/$dir
+            unzip -o "$file" -d lambda_zips_unzipped/$dir
+          done
+        ' sh {} +
+
+    - name: Move Unzipped Lambda ZIPs to Modules
+      run: |
+        find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
+          module_name=$(basename "$dir")
+          if [ -d "dev/.terraform/modules/$module_name" ]; then
+            mv "$dir"/* "dev/.terraform/modules/$module_name/lambda/"
+          fi
+        done
+
     # Terraform Validation Steps
     - name: terraform validate ${{ inputs.stack }}
       uses: dflook/terraform-validate@v1
