--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -174,7 +174,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ github.repository }}
         run-id: ${{ steps.get-run-id.outputs.run_id }}
-
+      
     - name: Unzip Lambda ZIPs
       run: |
         mkdir -p lambda_zips_unzipped
@@ -185,15 +185,21 @@ jobs:
             unzip -o "$file" -d lambda_zips_unzipped/$dir
           done
         ' sh {} +
-
+    
+    - name: List unzipped Lambda directories
+      run: ls -R lambda_zips_unzipped
+    
     - name: Move Unzipped Lambda ZIPs to Modules
       run: |
         find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
           module_name=$(basename "$dir")
-          if [ -d "dev/.terraform/modules/$module_name" ]; then
+          if [ -d "dev/.terraform/modules/$module_name/lambda" ]; then
             mv "$dir"/* "dev/.terraform/modules/$module_name/lambda/"
           fi
         done
+    
+    - name: List Lambda directories in Modules
+      run: ls -R dev/.terraform/modules/
 
     # Terraform Validation Steps
     - name: terraform validate ${{ inputs.stack }}
