--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -234,14 +234,15 @@ jobs:
       run: |
         find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
           module_name=$(basename "$dir")
-          if [ -d "dev/.terraform/modules/$module_name/lambda" ]; then
-            mv "$dir"/* "dev/.terraform/modules/$module_name/lambda/"
+          if [ -d "${{ inputs.stack }}/.terraform/modules/$module_name/lambda" ]; then
+            mv "$dir"/*.py "${{ inputs.stack }}/.terraform/modules/$module_name/lambda/"
+            mv "$dir"/*.zip "${{ inputs.stack }}/.terraform/modules/$module_name/"
           fi
         done
-    
+
     - name: List Lambda directories in Modules
-      run: ls -R dev/.terraform/modules/
-      
+      run: ls -R ${{ inputs.stack }}/.terraform/modules/
+
     - name: Tofu Apply
       id: apply
       continue-on-error: true
