--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -174,17 +174,6 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ github.repository }}
         run-id: ${{ steps.get-run-id.outputs.run_id }}
-      
-    - name: Unzip Lambda ZIPs
-      run: |
-        mkdir -p lambda_zips_unzipped
-        find . -type f -name '*.zip' -exec sh -c '
-          for file; do
-            dir=$(basename "$file" .zip)
-            mkdir -p lambda_zips_unzipped/$dir
-            unzip -o "$file" -d lambda_zips_unzipped/$dir
-          done
-        ' sh {} +
     
     - name: List unzipped Lambda directories
       run: ls -R lambda_zips_unzipped
@@ -230,12 +219,23 @@ jobs:
         rm -rf .terraform .terraform.lock.hcl
         tofu init -upgrade
     # Build or change infrastructure according to Tofu configuration files
+    - name: Unzip Lambda ZIPs
+      run: |
+        mkdir -p lambda_zips_unzipped
+        find . -type f -name '*.zip' -exec sh -c '
+          for file; do
+            dir=$(basename "$file" .zip)
+            mkdir -p lambda_zips_unzipped/$dir
+            unzip -o "$file" -d lambda_zips_unzipped/$dir
+          done
+        ' sh {} +
+
     - name: Move Unzipped Lambda ZIPs to Modules
       run: |
         find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
           module_name=$(basename "$dir")
           if [ -d "${{ inputs.stack }}/.terraform/modules/$module_name/lambda" ]; then
-            mv "$dir"/*.py "${{ inputs.stack }}/.terraform/modules/$module_name/lambda/"
+            mv "$dir"/* "${{ inputs.stack }}/.terraform/modules/$module_name/lambda/"
           fi
         done
 
