--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -219,6 +219,7 @@ jobs:
 
     - name: Unzip Lambda Files
       run: |
+        cd ${{ inputs.stack }}
         mkdir -p lambda_zips_unzipped
         find . -type f -name '*.zip' -exec unzip -o {} -d lambda_zips_unzipped \;
         find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
@@ -228,18 +229,18 @@ jobs:
         done
         find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
           module_name=$(basename "$dir")
-          mkdir -p "dev/.terraform/modules/$module_name"
-          mv "$dir"/*.zip "dev/.terraform/modules/$module_name/" 2>/dev/null || true
+          mkdir -p ".terraform/modules/$module_name"
+          mv "$dir"/*.zip ".terraform/modules/$module_name/" 2>/dev/null || true
         done
         # Check if the lambda.zip files are in the correct paths
-        find dev/.terraform/modules -type f -name 'lambda.zip' -exec ls -l {} \;
+        find .terraform/modules -type f -name 'lambda.zip' -exec ls -l {} \;
 
     - name: List Lambda directories in Modules
-      run: ls -R dev/.terraform/modules/
+      run: ls -R .terraform/modules/
 
     - name: Verify Lambda ZIPs
       run: |
-        find dev/.terraform/modules -type f -name 'lambda.zip' -exec ls -l {} \;
+        find .terraform/modules -type f -name 'lambda.zip' -exec ls -l {} \;
 
     - name: Tofu Apply
       id: apply
