--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -216,10 +216,11 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ github.repository }}
         run-id: ${{ steps.get-run-id.outputs.run_id }}
+        path: lambda_zips_unzipped
     
     - name: Verify artifact contents
       run: |
-        ls -R lambda_zips
+        ls -R lambda_zips_unzipped
 
     - name: Unzip Lambda Files
       run: |
