--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -209,7 +209,7 @@ jobs:
         tofu init -upgrade
     # Build or change infrastructure according to Tofu configuration files
 
-    - name: Download Lambda ZIPs
+    - name: Download artifact
       uses: actions/download-artifact@v4
       with:
         name: lambda-zips
@@ -217,33 +217,33 @@ jobs:
         repository: ${{ github.repository }}
         run-id: ${{ steps.get-run-id.outputs.run_id }}
         path: lambda_zips_unzipped
-    
+  
     - name: Verify artifact contents
       run: |
+        echo "Contents of lambda_zips_unzipped:"
         ls -R lambda_zips_unzipped
-
+    
     - name: Unzip Lambda Files
       run: |
         cd ${{ inputs.stack }}
         mkdir -p lambda_zips_unzipped
-        find . -type f -name '*.zip' -exec unzip -o {} -d lambda_zips_unzipped \;
-        find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
-          if [ -d "$dir/lambda" ]; then
-            mv "$dir/lambda"/*.zip "$dir/" 2>/dev/null || true
-          fi
+        
+        # Find and unzip all lambda zip files dynamically
+        find ../lambda_zips_unzipped -type f -name '*.zip' | while read zip_file; do
+          module_name=$(basename "$zip_file" .zip)
+          unzip -o "$zip_file" -d ".terraform/modules/$module_name"
+          echo "Unzipped $zip_file to .terraform/modules/$module_name"
         done
-        find lambda_zips_unzipped -type d -mindepth 1 -maxdepth 1 | while read -r dir; do
-          module_name=$(basename "$dir")
-          mkdir -p ".terraform/modules/$module_name"
-          mv "$dir"/*.zip ".terraform/modules/$module_name/" 2>/dev/null || true
+    
+        # Verify contents of each module directory
+        find .terraform/modules -mindepth 1 -maxdepth 1 -type d | while read dir; do
+          echo "Contents of $dir:"
+          ls -l "$dir"
         done
-        # Check if the lambda.zip files are in the correct paths
-        find .terraform/modules -type f -name 'lambda.zip' -exec ls -l {} \;
-        ls -R
-
+    
     - name: Verify Lambda ZIPs
       run: |
-        find ${{ inputs.stack }}/.terraform/modules -type f -name 'lambda.zip' -exec ls -l {} \;
+        find .terraform/modules -type f -name 'lambda.zip' -exec ls -l {} \;
 
     - name: Tofu Apply
       id: apply
