--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -176,8 +176,8 @@ jobs:
         find .terraform/modules -mindepth 2 -maxdepth 2 -type d -name 'lambda' | while read lambda_dir; do
           module_dir=$(dirname "$lambda_dir")
           lambda_name=$(basename "$module_dir")
-          zip -r "$module_dir/lambda.zip" "$lambda_dir"
-          echo "Zipped $lambda_dir to $module_dir/lambda.zip"
+          cd "$lambda_dir" && zip -r "../../lambda.zip" * && cd -
+          echo "Zipped contents of $lambda_dir to $module_dir/lambda.zip"
         done
     
         # Verify contents of each module directory after zipping
