--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -170,13 +170,13 @@ jobs:
         tofu init -upgrade
     # Build or change infrastructure according to Tofu configuration files
 
-    - name: Debugging and Zip Lambda Directories
+    - name: Zip Lambda Directories
       run: |
         cd ${{ inputs.stack }}
         echo "Current directory: $(pwd)"
         echo "Listing .terraform/modules contents:"
         find .terraform/modules -type d
-    
+        
         find .terraform/modules -mindepth 2 -maxdepth 2 -type d -name 'lambda' | while read lambda_dir; do
           module_dir=$(dirname "$lambda_dir")
           zip_name="$module_dir/lambda.zip"
@@ -184,10 +184,24 @@ jobs:
           echo "Processing $lambda_dir"
           if [ -d "$lambda_dir" ]; then
             echo "Found directory $lambda_dir, preparing to zip contents into $zip_name"
+            mkdir -p "$module_dir"
             cd "$lambda_dir"
+            
+            # Print the current directory and contents for debugging
+            echo "Inside lambda_dir: $(pwd)"
+            ls -la
+            
+            # Create the zip file in the correct location
             zip -r "$zip_name" ./*
+            
+            # Verify the zip creation
+            if [ -f "$zip_name" ]; then
+              echo "Successfully created $zip_name"
+            else
+              echo "Failed to create $zip_name"
+            fi
+            
             cd - > /dev/null
-            echo "Zipped contents of $lambda_dir into $zip_name"
           else
             echo "Directory $lambda_dir does not exist, skipping."
           fi
