--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -185,6 +185,13 @@ jobs:
           if [ -d "$lambda_dir" ]; then
             echo "Found directory $lambda_dir, preparing to zip contents into $zip_name"
             mkdir -p "$module_dir"
+            
+            # Ensure the module directory is writable
+            if [ ! -w "$module_dir" ]; then
+              echo "Cannot write to $module_dir, skipping."
+              continue
+            fi
+            
             cd "$lambda_dir"
             
             # Print the current directory and contents for debugging
