--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -174,46 +174,42 @@ jobs:
       run: |
         cd ${{ inputs.stack }}
         echo "Current directory: $(pwd)"
-        echo "Listing .terraform/modules contents:"
+        echo "Listing contents of .terraform/modules:"
         find .terraform/modules -type d
-        
-        find .terraform/modules -mindepth 2 -maxdepth 2 -type d -name 'lambda' | while read lambda_dir; do
+    
+        # Find directories named 'lambda' and zip their contents
+        find .terraform/modules -type d -name 'lambda' | while read lambda_dir; do
           module_dir=$(dirname "$lambda_dir")
           zip_name="$module_dir/lambda.zip"
           
-          echo "Processing $lambda_dir"
+          echo "Processing directory $lambda_dir"
+          echo "Target zip file: $zip_name"
+    
+          # Ensure the lambda directory exists and contains files
           if [ -d "$lambda_dir" ]; then
-            echo "Found directory $lambda_dir, preparing to zip contents into $zip_name"
-            
-            # Check if the directory is writable
-            if [ ! -w "$module_dir" ]; then
-              echo "Cannot write to $module_dir, skipping."
-              continue
-            fi
-            
             cd "$lambda_dir"
-            
-            # Print the current directory and contents for debugging
-            echo "Inside lambda_dir: $(pwd)"
+            echo "Inside $lambda_dir"
             ls -la
-            
-            # Create the zip file in the correct location
-            zip -r "$zip_name" ./*
-            
-            # Verify the zip creation
-            if [ -f "$zip_name" ]; then
-              echo "Successfully created $zip_name"
+    
+            # Zip the contents of the lambda directory
+            if [ "$(ls -A $lambda_dir)" ]; then
+              zip -r "$zip_name" ./*
+              if [ $? -eq 0 ]; then
+                echo "Successfully zipped contents of $lambda_dir to $zip_name"
+              else
+                echo "Failed to zip contents of $lambda_dir"
+              fi
             else
-              echo "Failed to create $zip_name"
+              echo "Directory $lambda_dir is empty, skipping."
             fi
-            
+    
             cd - > /dev/null
           else
-            echo "Directory $lambda_dir does not exist, skipping."
+            echo "Directory $lambda_dir does not exist or is not accessible, skipping."
           fi
         done
     
-        echo "Post-zipping directory contents:"
+        echo "Listing resulting zip files:"
         find .terraform/modules -type f -name 'lambda.zip'
     
         # Verify contents of each module directory after zipping
