--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -185,14 +185,14 @@ jobs:
           echo "Processing directory $lambda_dir"
           echo "Target zip file: $zip_name"
     
-          # Ensure the lambda directory exists and contains files
+          # Check if the lambda directory exists and contains files
           if [ -d "$lambda_dir" ]; then
             cd "$lambda_dir"
             echo "Inside $lambda_dir"
             ls -la
     
-            # Zip the contents of the lambda directory
-            if [ "$(ls -A $lambda_dir)" ]; then
+            # Check if the directory is empty
+            if [ "$(ls -A)" ]; then
               zip -r "$zip_name" ./*
               if [ $? -eq 0 ]; then
                 echo "Successfully zipped contents of $lambda_dir to $zip_name"
